dig _github-pages-challenge-EngNatheerAlnaqep.cmsgptcloud.h-m-gpt.net

--- a/cmsgptcloud/Views/Home/Index.cshtml
+++ b/cmsgptcloud/Views/Home/Index.cshtml
@@ -43,10 +43,10 @@
 
         <img src="~/images/course-2.jpg">
         <div class="name">
-            <h1>HELPGP</h1>
+            <h1>HELPGPT</h1>
          
         
-           <a href="~/Views/Company/index.cshtml"> homwe<button></button></a>
+       
         </div>
 
     </div>
