--- a/cmsgptcloud/Views/Shared/_Layout.cshtml
+++ b/cmsgptcloud/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
                     <a class="navbar-link" href="/User/login">
                         <li>
 
-                            طلب الحل من الفريق
+                           طلب جديد
 
                         </li>
                     </a>
@@ -95,12 +95,12 @@
                     <a class="navbar-link" href="/tb_order/Create">
                         <li>
 
-                            طلب الحل من الفريق
+                            طلب جديد
 
                         </li>
                     </a>
                 }
-                <a class="link" href="/quitions/Display"> <li> الاسئلة </li></a>
+                <a class="link" href="/quitions/Display"> <li> المشاريع </li></a>
                 <a class="navbar-link" href="/Home/Index">  <li>الصفحة الرئيسية </li></a>
             </ul>
         </nav>
@@ -129,7 +129,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - PRO-TECH</p>
+            <p>&copy; @DateTime.Now.Year - natheer-alnaqep-</p>
         </footer>
     </div>
 
