--- a/cmsgptcloud/Views/quitions/Index.cshtml
+++ b/cmsgptcloud/Views/quitions/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<cmsgptcloud.Models.quition>
+﻿@model IEnumerable<cmsgptcloud.Models.quitions>
 
 @{
     ViewBag.Title = "Index";
